roles/telemetry/files/iptables-docker-user.rules
*filter

:DOCKER-USER - [0:0]
:DOCKER-FORWARD-PUBLIC - [0:0]
:DOCKER-FORWARD-LOG - [0:0]

-F DOCKER-USER
-F DOCKER-FORWARD-PUBLIC
-F DOCKER-FORWARD-LOG

-A DOCKER-USER -m state --state ESTABLISHED,RELATED -j RETURN
-A DOCKER-USER -i eth0 -j DOCKER-FORWARD-PUBLIC
-A DOCKER-USER -i eth2 -j DOCKER-FORWARD-LOG

-A DOCKER-FORWARD-PUBLIC -p tcp --destination-port 80 -j RETURN
-A DOCKER-FORWARD-PUBLIC -p tcp --destination-port 443 -j RETURN
-A DOCKER-FORWARD-PUBLIC -p tcp --destination-port 2376 -m comment --comment "Docker Cloud Access" -j RETURN
-A DOCKER-FORWARD-PUBLIC -p tcp --destination-port 2377 -m comment --comment "Docker Swarm" -j RETURN
-A DOCKER-FORWARD-PUBLIC -j REJECT

-A DOCKER-FORWARD-LOG -p tcp --destination-port 5555 -j RETURN
-A DOCKER-FORWARD-LOG -p udp --destination-port 12201 -j RETURN
-A DOCKER-FORWARD-LOG -p tcp --destination-port 12201 -j RETURN
-A DOCKER-FORWARD-LOG -p tcp --destination-port 8086 -m comment --comment "InfluxDB" -j RETURN
-A DOCKER-FORWARD-LOG -j REJECT

COMMIT
